// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`backlinks > frontmatter tags > multiple 1`] = `
VFile {
  "contents": "<h1 id="test">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href="one">One (vault1)</a></li>
<li><a href="two">Two (vault1)</a></li>
</ul>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`backlinks > frontmatter tags > single 1`] = `
VFile {
  "contents": "<h1 id="test">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href="one">One (vault1)</a></li>
</ul>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`backlinks > hashtag 1`] = `
VFile {
  "contents": "<h1 id="test">Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href="one">One (vault1)</a></li>
</ul>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;
